# pong

./: .gitignore  CMakeLists.txt
include/: bola.h  config.h  raquete.h
src/: bola.cpp  main.cpp  raquete.cpp
